src/test/deca/syntax/invalid/sansObjet/crochets.deca
// Description:
//    tests de programme incorrect lexicalement (usage des crochets hors STRING)
//
// Resultats:
//    ligne 11 : token recognition error at: '['
//
// Historique:
//    cree le 01/01/2024

{
  int a = [1,2,3];
}
